--- a/app.json
+++ b/app.json
@@ -31,6 +31,12 @@
     },
     "plugins": [
       [
+        "expo-camera",
+        {
+          "cameraPermission": "Allow DailyForge to access your camera to show proof of your habits."
+        }
+      ],
+      [
         "expo-notifications",
         {
           "icon": "./assets/notification-icon.png",
