feat: Add Google Sign-In package to app configuration

--- a/app.json
+++ b/app.json
@@ -56,7 +56,8 @@
           }
         }
       ],
-      "@react-native-community/datetimepicker"
+      "@react-native-community/datetimepicker",
+      "@react-native-google-signin/google-signin"
     ],
     "experiments": {
       "typedRoutes": true,
