feat: Add comprehensive profile edit functionality and enhanced progress tracking
- Add ProfileEdit screen with name, email, and password update capabilities
- Implement form validation and security error handling for profile updates
- Update Settings screen with clickable profile card and improved UI
- Add optional authService helper functions for profile management
- Enhance Progress screen with real-time heatmap generation from habit data
- Implement SVG fire icons replacing emojis throughout the app
- Add daily auto-reset functionality for habit completion status
- Fix userId type issue by making it optional in Habit interface
- Add CreateHabitInput type helper for cleaner habit creation
- Improve HabitService with better streak calculation and daily reset logic
- Add comprehensive stats: total wins, best streaks, completion rates
- Implement habit rankings with medal badges for top 3 performers
- Add time range selector (week/month/quarter) for progress visualization
- Include loading states and error handling across all new features
- Add toast notifications for better user feedback
- Sync Firebase Auth and Firestore data on profile updates

Breaking changes: None - all changes are backwards compatible

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "DailyForge",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icons8-correct-100 (1).png",
+    "icon": "./assets/images/logo.png",
     "scheme": "dailyforge",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -30,7 +30,7 @@
     },
     "web": {
       "output": "static",
-      "favicon": "./assets/images/icons8-correct-100 (1).png",
+      "favicon": "./assets/images/logo.png",
       "bundler": "metro"
     },
     "plugins": [
